<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".activities.InfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info_text_view_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/info_text_1"
            android:textSize="18sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info_text_view_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_text_view_1"
            android:layout_marginTop="8dp"
            android:text="@string/info_text_2"
            android:textSize="18sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info_text_view_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_text_view_2"
            android:layout_marginTop="8dp"
            android:text="@string/info_text_3"
            android:textSize="18sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>